generated/manifests/prod-axon/whisparr/HTTPRoute-whisparr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr
  namespace: media
spec:
  hostnames:
    - whisparr.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: whisparr
          port: 6969
      timeouts:
        request: 300s
