generated/manifests/prod-axon/whisparr/SecurityPolicy-whisparr-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: whisparr-oidc
  namespace: media
spec:
  oidc:
    clientID: whisparr
    clientSecret:
      name: whisparr-oidc-client-secret
    forwardAccessToken: true
    provider:
      authorizationEndpoint: https://idm.json64.dev/ui/oauth2
      issuer: https://idm.json64.dev/oauth2/openid/whisparr
      tokenEndpoint: https://idm.json64.dev/oauth2/token
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: whisparr
