generated/manifests/prod-axon/whisparr/CiliumNetworkPolicy-allow-gateway-ingress-whisparr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-whisparr
  namespace: media
spec:
  description: Allow Envoy Gateway proxies to reach whisparr.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: whisparr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "6969"
              protocol: TCP
